--- a/Project 1/receita1.html
+++ b/Project 1/receita1.html
@@ -29,15 +29,48 @@
         </nav>
     </section>
 
-    <section>
+    <section class="recipe-detail_section">
         <div class="recipe-detail_instructions">
             <div class="recipe-ingredients">
                 <h3 class="recipe-ingredients_title">Ingredientes</h3>
                 <ul class="recipe-ingredients_list">
-                    <li class="recipe-ingredients_items">a</li>
+                    <li class="recipe-ingredients_items">Azeite virgem - 2 c. de sopa</li>
+                    <li class="recipe-ingredients_items">Cebola - 1 unid.</li>
+                    <li class="recipe-ingredients_items">Alho - 4 dentes</li>
+                    <li class="recipe-ingredients_items">Carne de vitela picada - 500 g</li>
+                    <li class="recipe-ingredients_items">Vinho branco - 50 ml</li>
+                    <li class="recipe-ingredients_items">Orégão seco - 1 q.b.</li>
+                    <li class="recipe-ingredients_items">Sal - 1 c. de chá</li>
+                    <li class="recipe-ingredients_items">Pimenta preta de moinho - 1 q.b.</li>
+                    <li class="recipe-ingredients_items">Tomate maduro - 3 unid.</li>
+                    <li class="recipe-ingredients_items">Polpa de tomate maduro - 100 ml</li>
+                    <li class="recipe-ingredients_items">Manteiga - 80 g</li>
+                    <li class="recipe-ingredients_items">Farinha - 80 g</li>
+                    <li class="recipe-ingredients_items">Leite meio-gordo - 400 ml</li>
+                    <li class="recipe-ingredients_items">Folhas de lasanha prontas a ir ao forno - 12 folhas</li>
+                    <li class="recipe-ingredients_items">Queijo mozzarella ralado - 80 g</li>
+                    <li class="recipe-ingredients_items">Raminhos de manjericão - 11 ramos</li>
+                </ul>
+            </div>
+            <div class="recipe-steps">
+                <h3 class="recipe-steps_title">Preparação</h3>
+                <ul class="recipe-steps_list">
+                    <li class="recipe-steps-items">1. Pré-aqueça o forno a 180 ºC.</li>
+                    <li class="recipe-steps-items">2. Num tacho, refogue em azeite a cebola e o alho picados. Junte a carne picada e deixe cozinhar durante 3 minutos em lume médio mexendo sempre.</li>
+                    <li class="recipe-steps-items">3. De seguida, refresque com o vinho branco e adicione os orégãos. Tempere com metade do sal e a pimenta.</li>
+                    <li class="recipe-steps-items">4. Junte o tomate picado e limpo de pele e grainhas juntamente com a polpa de tomate envolva.</li>
+                    <li class="recipe-steps-items">5. Deixe cozinhar durante 10 minutos em lume médio mexendo de vez em quando até secar um pouco o preparado. Tire do lume e reserve.</li>
+                    <li class="recipe-steps-items">6. Para o molho bechamel: derreta manteiga num tacho e logo de seguida adicione a farinha mexendo bem, até formar uma mistura sem grumos. Acrescente o leite aos poucos mexendo sempre e deixe cozinhar em lume brando até engrossar. Tempere com o restante sal e reserve.</li>
+                    <li class="recipe-steps-items">7. Num tabuleiro de forno quadrado coloque por camadas: as folhas de lasanha, o preparado da carne e o molho bechamel. Repita o processo, terminando com uma camada de folhas de lasanha.</li>
+                    <li class="recipe-steps-items">8. Polvilhe com queijo mozzarella e leve ao forno a 190 ºC durante 25 minutos.</li>
+                    <li class="recipe-steps-items">9. Sirva decorado com os raminhos de manjericão.</li>
                 </ul>
             </div>
         </div>
     </section>
+
+    <footer class="footer">
+        <p>&copy; Receitas de Culinária - Projecto 1 de TWEB 2024</p>
+    </footer>
 </body>
 </html>
