--- a/Project 1/receita2.html
+++ b/Project 1/receita2.html
@@ -10,9 +10,64 @@
     <title>Receitas de Culinária</title>
 </head>
 <body>
+    <div class="loading-screen">
+        <div class="loading-content">
+            <div class="loading-text">A carregar...</div>
+            <div class="spinner"></div>
+        </div>
+    </div>
     <header class="header">
         <h1 class="header-title">Receitas de Culinária</h1>
     </header>
+    <section>
+        <nav class="navegar">
+            <ul class="main-list">
+                <li class="item-list">
+                    <a href="http://127.0.0.1:5500/TWEB/Project%201/Project1.html" class="home_link">Home</a>
+                </li>
+                <li class="item-list">
+                    <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M8.98985 7.01056L3.15002 12.8491L3.93121 13.65L10.5918 7.01056L3.93121 0.350024L3.15002 1.14966L8.98985 7.01056Z" fill="black"></path>
+                    </svg>
+                    <span>Bolo de iogurte</span>
+                </li>
+            </ul>
+        </nav>
+    </section>
+
+    <section class="recipe-detail_section">
+        <div class="recipe-detail_instructions">
+            <div class="recipe-ingredients">
+                <h3 class="recipe-ingredients_title">Ingredientes</h3>
+                <ul class="recipe-ingredients_list">
+                    <li class="recipe-ingredients_items">Manteiga (para untar) - 1 q.b.</li>
+                    <li class="recipe-ingredients_items">Iogurte natural - 1 unid.</li>
+                    <li class="recipe-ingredients_items">Ovo M - 4 unid.</li>
+                    <li class="recipe-ingredients_items">Açúcar - 3 copos</li>
+                    <li class="recipe-ingredients_items">Óleo - ¼ copo</li>
+                    <li class="recipe-ingredients_items">Fermento em pó - 2 c. de chá</li>
+                    <li class="recipe-ingredients_items">Farinha - 2 copos</li>
+                    <li class="recipe-ingredients_items">Açúcar em pó - 2 c. de sopa</li>
+                </ul>
+            </div>
+            <div class="recipe-steps">
+                <h3 class="recipe-steps_title">Preparação</h3>
+                <ul class="recipe-steps_list">
+                    <li class="recipe-steps-items">1. Pre-aqueça o forno a 180 ºC.</li>
+                    <li class="recipe-steps-items">2. Unte uma forma de chaminé com manteiga e reserve.</li>
+                    <li class="recipe-steps-items">3. Numa taça, junte o iogurte e os ovos. Utilize a medida do copo de iogurte e adicione o açúcar, o óleo, a farinha e o fermento.</li>
+                    <li class="recipe-steps-items">4. Bata com uma batedeira até a massa estar homogénea.</li>
+                    <li class="recipe-steps-items">5. Deite a massa na forma de chaminé, previamente untada, e leve ao forno durante 40 a 45 minutos, ou espete um palito na massa e verifique se sai limpo.</li>
+                    <li class="recipe-steps-items">7. Retire do forno e deixe arrefecer ligeiramente antes de desenformar.</li>
+                    <li class="recipe-steps-items">8. Antes de servir, polvilhe com o açúcar em pó.</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <p>&copy; Receitas de Culinária - Projecto 1 de TWEB 2024</p>
+    </footer>
     
 </body>
 </html>
