--- a/Project 1/receita5.html
+++ b/Project 1/receita5.html
@@ -10,6 +10,12 @@
     <title>Receitas de Culinária</title>
 </head>
 <body>
+    <div class="loading-screen">
+        <div class="loading-content">
+            <div class="loading-text">A carregar...</div>
+            <div class="spinner"></div>
+        </div>
+    </div>
     <header class="header">
         <h1 class="header-title">Receitas de Culinária</h1>
     </header>
@@ -23,7 +29,7 @@
                     <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M8.98985 7.01056L3.15002 12.8491L3.93121 13.65L10.5918 7.01056L3.93121 0.350024L3.15002 1.14966L8.98985 7.01056Z" fill="black"></path>
                     </svg>
-                    <span>Pastel de nata caseiro</span>
+                    <span>Burritos</span>
                 </li>
             </ul>
         </nav>
@@ -48,14 +54,21 @@
             <div class="recipe-steps">
                 <h3 class="recipe-steps_title">Preparação</h3>
                 <ul class="recipe-steps_list">
-                    <li class="recipe-steps-items">1. Deite o açúcar, o açúcar baunilhado e o amido de milho no copo e triture 10 segundos, na velocidade 9.</li>
-                    <li class="recipe-steps-items">2. Raspe as paredes do copo com a espátula, junte as gemas e o leite e misture 10 segundos, na velocidade 4.</li>
-                    <li class="recipe-steps-items">3. Encaixe a borboleta nas lâminas, junte a tira de casca de limão e programe 12 minutos, na velocidade 2, a 90°C, sem o copo medidor.</li>
-                    <li class="recipe-steps-items">4. Mude o creme para outro recipiente e deixe arrefecer.</li>
-                    <li class="recipe-steps-items">5. Estenda a massa folhada, enrole-a como se fosse uma torta e divida-a em 14 rodelas.</li>
-                    <li class="recipe-steps-items">6. Pré-aqueça o forno a 250° C.</li>
-                    <li class="recipe-steps-items">7. Coloque as rodelas de massa nas formas, pressionando com os polegares e esticando de modo a forrar completamente as formas, e distribua o recheio pelo interior.</li>
-                    <li class="recipe-steps-items">8. Leve a cozer durante 10 minutos, colocando o tabuleiro um pouco abaixo do meio do forno. Polvilhe com o açúcar em pó e a canela.</li>
+                    <h3 class="recipe-steps_header">Tortilhas</h5>
+                    <br>
+                    <li class="recipe-steps-items">1. Comece por fazer as tortilhas: misture a farinha, o bicarbonato e o sal numa tigela média e incorpore bem; adicione o óleo vegetal e a água morna e amasse até obter uma massa homogénea.</li>
+                    <li class="recipe-steps-items">2. Divida a massa em bolinhas e estique-as numa superfície enfarinhada.</li>
+                    <li class="recipe-steps-items">3. Coza a massa numa frigideira bem quente e reserve até usar.</li>
+                    <br>
+                    <h3 class="recipe-steps_header">Recheio</h5>
+                    <br>
+                    <li class="recipe-steps-items">1. Esmague o abacate e cubra-o com um pouco de sumo de limão, reserve.</li>
+                    <li class="recipe-steps-items">2. Pique a cebola e o tomate em pedaços pequenos e tempere com os coentros picados, o sumo de lima, sal e azeite. Reserve também.</li>
+                    <li class="recipe-steps-items">3. Salteie o feijão com o frango desfiado e o arroz com água do feijão.</li>
+                    <li class="recipe-steps-items">4. Numa taça, combine o recheio de feijão e frango com um pouco do molho de tomate e coentros.</li>
+                    <li class="recipe-steps-items">5. Aqueça uma tortilha na frigideira e estique-a por cima de papel de alumínio.</li>
+                    <li class="recipe-steps-items">6. Guarneça com o abacate esmagado, o recheio de feijão e frango e um pouco de crème fraiche.</li>
+                    <li class="recipe-steps-items">7. Enrole o seu burrito e leve-o consigo!</li>
                 </ul>
             </div>
         </div>
