--- a/Project 1/receita6.html
+++ b/Project 1/receita6.html
@@ -10,6 +10,12 @@
     <title>Receitas de Culinária</title>
 </head>
 <body>
+    <div class="loading-screen">
+        <div class="loading-content">
+            <div class="loading-text">A carregar...</div>
+            <div class="spinner"></div>
+        </div>
+    </div>
     <header class="header">
         <h1 class="header-title">Receitas de Culinária</h1>
     </header>
@@ -23,7 +29,7 @@
                     <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M8.98985 7.01056L3.15002 12.8491L3.93121 13.65L10.5918 7.01056L3.93121 0.350024L3.15002 1.14966L8.98985 7.01056Z" fill="black"></path>
                     </svg>
-                    <span>Burritos</span>
+                    <span>Carapau de corrida</span>
                 </li>
             </ul>
         </nav>
@@ -34,35 +40,40 @@
             <div class="recipe-ingredients">
                 <h3 class="recipe-ingredients_title">Ingredientes</h3>
                 <ul class="recipe-ingredients_list">
-                    <li class="recipe-ingredients_items">Açúcar - 75 g </li>
-                    <li class="recipe-ingredients_items">Açúcar baunilhado - 1 c. de chá</li>
-                    <li class="recipe-ingredients_items">Amido de milho - 20 g</li>
-                    <li class="recipe-ingredients_items">Gema de ovo L - 4 unid.</li>
-                    <li class="recipe-ingredients_items">Leite meio-gordo - 400 g</li>
-                    <li class="recipe-ingredients_items">Casca de limão - 1 unid.</li>
-                    <li class="recipe-ingredients_items">Massa folhada - 1 emb.</li>
-                    <li class="recipe-ingredients_items">Açúcar em pó - 1 c. de sopa</li>
-                    <li class="recipe-ingredients_items">Canela em pó - 1 c. de sopa</li>
+                    <li class="recipe-ingredients_items">Caldo Carapau </li>
+                    <li class="recipe-ingredients_items">Erva príncipe q.b.</li>
+                    <li class="recipe-ingredients_items">Sal q.b.</li>
+                    <li class="recipe-ingredients_items">2 dentes de alho</li>
+                    <li class="recipe-ingredients_items">1lt de água</li>
+                    <li class="recipe-ingredients_items">Cura do Carapau</li>
+                    <li class="recipe-ingredients_items">500g de carapau fresco limpo</li>
+                    <li class="recipe-ingredients_items">3 colheres de sopa de sal grosso</li>
+                    <li class="recipe-ingredients_items">1 colher de sopa de açúcar mascavado</li>
+                    <li class="recipe-ingredients_items">2 dentes de alho muito finamente picado</li>
+                    <li class="recipe-ingredients_items">Salada de Batata </li>
+                    <li class="recipe-ingredients_items">700g de batatinha nova </li>
+                    <li class="recipe-ingredients_items">Sal q.b.</li>
+                    <li class="recipe-ingredients_items">1 talo de aipo</li>
+                    <li class="recipe-ingredients_items">1 cebola roxa muito bem picada</li>
+                    <li class="recipe-ingredients_items">Molho</li>
+                    <li class="recipe-ingredients_items">70ml de azeite</li>
+                    <li class="recipe-ingredients_items">Sumo de 1 limão</li>
+                    <li class="recipe-ingredients_items">1 pitada de pimenta preta</li>
+                    <li class="recipe-ingredients_items">1 colher de chá açúcar mascavado</li>
                 </ul>
             </div>
             <div class="recipe-steps">
                 <h3 class="recipe-steps_title">Preparação</h3>
                 <ul class="recipe-steps_list">
-                    <h3 class="recipe-steps_header">Tortilhas</h5>
-                    <br>
-                    <li class="recipe-steps-items">1. Comece por fazer as tortilhas: misture a farinha, o bicarbonato e o sal numa tigela média e incorpore bem; adicione o óleo vegetal e a água morna e amasse até obter uma massa homogénea.</li>
-                    <li class="recipe-steps-items">2. Divida a massa em bolinhas e estique-as numa superfície enfarinhada.</li>
-                    <li class="recipe-steps-items">3. Coza a massa numa frigideira bem quente e reserve até usar.</li>
-                    <br>
-                    <h3 class="recipe-steps_header">Recheio</h5>
-                    <br>
-                    <li class="recipe-steps-items">1. Esmague o abacate e cubra-o com um pouco de sumo de limão, reserve.</li>
-                    <li class="recipe-steps-items">2. Pique a cebola e o tomate em pedaços pequenos e tempere com os coentros picados, o sumo de lima, sal e azeite. Reserve também.</li>
-                    <li class="recipe-steps-items">3. Salteie o feijão com o frango desfiado e o arroz com água do feijão.</li>
-                    <li class="recipe-steps-items">4. Numa taça, combine o recheio de feijão e frango com um pouco do molho de tomate e coentros.</li>
-                    <li class="recipe-steps-items">5. Aqueça uma tortilha na frigideira e estique-a por cima de papel de alumínio.</li>
-                    <li class="recipe-steps-items">6. Guarneça com o abacate esmagado, o recheio de feijão e frango e um pouco de crème fraiche.</li>
-                    <li class="recipe-steps-items">7. Enrole o seu burrito e leve-o consigo!</li>
+                    <li class="recipe-steps-items">1. Faça o caldo do carapau com os ingredientes todos e deixe ferver bem. Filtre e tenha pronto à mão de semear.</li>
+                    <li class="recipe-steps-items">2. Esfregue o carapau com o sal, o açúcar mascavado e o alho e deixe repousar.</li>
+                    <li class="recipe-steps-items">3. De seguida, lave muito bem a batatinha nova, corte em cubos e coza-a em abundante água com sal.</li>
+                    <li class="recipe-steps-items">4. Retire, passe por água fria e reserve.</li>
+                    <li class="recipe-steps-items">5. Pique muito finamente a cebola roxa com o aipo e combine numa saladeira. Adicione a batatinha nova escorrida e reserve no frigorífico.</li>
+                    <li class="recipe-steps-items">6. Com uma vara de arames, combine os ingredientes do molho e acrescente um pouco do caldo de carapau, deixe arrefecer; tempere a sua salada com o molho e uma pitada de sal.</li>
+                    <li class="recipe-steps-items">7.  Lave bem o carapau e grelhe-o numa frigideira; retire as espinhas, a pele e desfie.</li>
+                    <li class="recipe-steps-items">8. Envolva o carapau na salada de batata.</li>
+                    <li class="recipe-steps-items">9. Guarneça com uma pitada de pimenta e sirva.</li>
                 </ul>
             </div>
         </div>
