--- a/Project 1/receita7.html
+++ b/Project 1/receita7.html
@@ -10,6 +10,12 @@
     <title>Receitas de Culinária</title>
 </head>
 <body>
+    <div class="loading-screen">
+        <div class="loading-content">
+            <div class="loading-text">A carregar...</div>
+            <div class="spinner"></div>
+        </div>
+    </div>
     <header class="header">
         <h1 class="header-title">Receitas de Culinária</h1>
     </header>
@@ -23,7 +29,7 @@
                     <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M8.98985 7.01056L3.15002 12.8491L3.93121 13.65L10.5918 7.01056L3.93121 0.350024L3.15002 1.14966L8.98985 7.01056Z" fill="black"></path>
                     </svg>
-                    <span>Carapau de corrida</span>
+                    <span>Bolachas de Amendoim</span>
                 </li>
             </ul>
         </nav>
@@ -34,40 +40,27 @@
             <div class="recipe-ingredients">
                 <h3 class="recipe-ingredients_title">Ingredientes</h3>
                 <ul class="recipe-ingredients_list">
-                    <li class="recipe-ingredients_items">Caldo Carapau </li>
-                    <li class="recipe-ingredients_items">Erva príncipe q.b.</li>
-                    <li class="recipe-ingredients_items">Sal q.b.</li>
-                    <li class="recipe-ingredients_items">2 dentes de alho</li>
-                    <li class="recipe-ingredients_items">1lt de água</li>
-                    <li class="recipe-ingredients_items">Cura do Carapau</li>
-                    <li class="recipe-ingredients_items">500g de carapau fresco limpo</li>
-                    <li class="recipe-ingredients_items">3 colheres de sopa de sal grosso</li>
-                    <li class="recipe-ingredients_items">1 colher de sopa de açúcar mascavado</li>
-                    <li class="recipe-ingredients_items">2 dentes de alho muito finamente picado</li>
-                    <li class="recipe-ingredients_items">Salada de Batata </li>
-                    <li class="recipe-ingredients_items">700g de batatinha nova </li>
-                    <li class="recipe-ingredients_items">Sal q.b.</li>
-                    <li class="recipe-ingredients_items">1 talo de aipo</li>
-                    <li class="recipe-ingredients_items">1 cebola roxa muito bem picada</li>
-                    <li class="recipe-ingredients_items">Molho</li>
-                    <li class="recipe-ingredients_items">70ml de azeite</li>
-                    <li class="recipe-ingredients_items">Sumo de 1 limão</li>
-                    <li class="recipe-ingredients_items">1 pitada de pimenta preta</li>
-                    <li class="recipe-ingredients_items">1 colher de chá açúcar mascavado</li>
+                    <li class="recipe-ingredients_items">120g de manteiga à temperatura ambiente</li>
+                    <li class="recipe-ingredients_items">100g de açúcar branco</li>
+                    <li class="recipe-ingredients_items">Alho - 4 dentes</li>
+                    <li class="recipe-ingredients_items">100g de açúcar mascavado</li>
+                    <li class="recipe-ingredients_items">2 ovos</li>
+                    <li class="recipe-ingredients_items">120g de manteiga de amendoim cremosa.</li>
+                    <li class="recipe-ingredients_items">280g de farinha de trigo sem fermento</li>
+                    <li class="recipe-ingredients_items">1 colher de chá de fermento em pó</li>
+                    <li class="recipe-ingredients_items">1 colher de chá de bicarbonato de sódio</li>
+                    <li class="recipe-ingredients_items">200g de amendoim com sal, picado/li>
                 </ul>
             </div>
             <div class="recipe-steps">
                 <h3 class="recipe-steps_title">Preparação</h3>
                 <ul class="recipe-steps_list">
-                    <li class="recipe-steps-items">1. Faça o caldo do carapau com os ingredientes todos e deixe ferver bem. Filtre e tenha pronto à mão de semear.</li>
-                    <li class="recipe-steps-items">2. Esfregue o carapau com o sal, o açúcar mascavado e o alho e deixe repousar.</li>
-                    <li class="recipe-steps-items">3. De seguida, lave muito bem a batatinha nova, corte em cubos e coza-a em abundante água com sal.</li>
-                    <li class="recipe-steps-items">4. Retire, passe por água fria e reserve.</li>
-                    <li class="recipe-steps-items">5. Pique muito finamente a cebola roxa com o aipo e combine numa saladeira. Adicione a batatinha nova escorrida e reserve no frigorífico.</li>
-                    <li class="recipe-steps-items">6. Com uma vara de arames, combine os ingredientes do molho e acrescente um pouco do caldo de carapau, deixe arrefecer; tempere a sua salada com o molho e uma pitada de sal.</li>
-                    <li class="recipe-steps-items">7.  Lave bem o carapau e grelhe-o numa frigideira; retire as espinhas, a pele e desfie.</li>
-                    <li class="recipe-steps-items">8. Envolva o carapau na salada de batata.</li>
-                    <li class="recipe-steps-items">9. Guarneça com uma pitada de pimenta e sirva.</li>
+                    <li class="recipe-steps-items">1. Comece por combinar a manteiga com os açúcares até obter uma mistura homogénea.</li>
+                    <li class="recipe-steps-items">2. Adicione os ovos e a manteiga de amendoim e envolva bem.</li>
+                    <li class="recipe-steps-items">3. Adicione a farinha peneirada com o fermento e o bicarbonato de sódio e torne a bater muito bem.</li>
+                    <li class="recipe-steps-items">4. Leve a massa a descansar ao frigorífico pelo menos uma hora.</li>
+                    <li class="recipe-steps-items">5. Molde bolinhas e envolva-as no amendoim picado; acachape as bolinhas com um garfo e transfira para um tabuleiro forrado com papel vegetal.</li>
+                    <li class="recipe-steps-items">6. Leve ao forno pré aquecido a 180ºC a 200ºC por cerca de 10 a 15 minutos. Deixe arrefecer antes de comer.</li>
                 </ul>
             </div>
         </div>
