--- a/Project 1/receita4.html
+++ b/Project 1/receita4.html
@@ -10,6 +10,12 @@
     <title>Receitas de Culinária</title>
 </head>
 <body>
+    <div class="loading-screen">
+        <div class="loading-content">
+            <div class="loading-text">A carregar...</div>
+            <div class="spinner"></div>
+        </div>
+    </div>
     <header class="header">
         <h1 class="header-title">Receitas de Culinária</h1>
     </header>
@@ -23,7 +29,7 @@
                     <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M8.98985 7.01056L3.15002 12.8491L3.93121 13.65L10.5918 7.01056L3.93121 0.350024L3.15002 1.14966L8.98985 7.01056Z" fill="black"></path>
                     </svg>
-                    <span>Bacalhau com natas</span>
+                    <span>Pastel de nata caseiro</span>
                 </li>
             </ul>
         </nav>
@@ -34,42 +40,28 @@
             <div class="recipe-ingredients">
                 <h3 class="recipe-ingredients_title">Ingredientes</h3>
                 <ul class="recipe-ingredients_list">
-                    <li class="recipe-ingredients_items">Batata - 500g</li>
-                    <li class="recipe-ingredients_items">Bacalhau (postas) - 2 unid.</li>
-                    <li class="recipe-ingredients_items">Azeite - 100ml</li>
-                    <li class="recipe-ingredients_items">Óleo (para fritar) - 750 g</li>
-                    <li class="recipe-ingredients_items">Louro - 2 folhas</li>
-                    <li class="recipe-ingredients_items">Alho picado - 3 dentes</li>
-                    <li class="recipe-ingredients_items">Cebola - 2 unid.</li>
-                    <li class="recipe-ingredients_items">Queijo mozzarella ralado - 100g</li>
-                </ul>
-                <br>
-                <br>
-                <br>
-                <h3 class="recipe-ingredients_title">Para o béchamel</h3>
-                <ul class="recipe-ingredients_list">
-                    <li class="recipe-ingredients_items">Manteiga - 40 g</li>
-                    <li class="recipe-ingredients_items">Farinha - 40 g</li>
-                    <li class="recipe-ingredients_items">Leite - 2,5 dl</li>
-                    <li class="recipe-ingredients_items">Natas - 2,5 dl</li>
-                    <li class="recipe-ingredients_items">Sal - q.b.</li>
-                    <li class="recipe-ingredients_items">Pimenta - q.b.</li>
-                    <li class="recipe-ingredients_items">Noz-moscada - q.b.</li>
+                    <li class="recipe-ingredients_items">Açúcar - 75 g </li>
+                    <li class="recipe-ingredients_items">Açúcar baunilhado - 1 c. de chá</li>
+                    <li class="recipe-ingredients_items">Amido de milho - 20 g</li>
+                    <li class="recipe-ingredients_items">Gema de ovo L - 4 unid.</li>
+                    <li class="recipe-ingredients_items">Leite meio-gordo - 400 g</li>
+                    <li class="recipe-ingredients_items">Casca de limão - 1 unid.</li>
+                    <li class="recipe-ingredients_items">Massa folhada - 1 emb.</li>
+                    <li class="recipe-ingredients_items">Açúcar em pó - 1 c. de sopa</li>
+                    <li class="recipe-ingredients_items">Canela em pó - 1 c. de sopa</li>
                 </ul>
             </div>
             <div class="recipe-steps">
                 <h3 class="recipe-steps_title">Preparação</h3>
                 <ul class="recipe-steps_list">
-                    <li class="recipe-steps-items">1. Pré-aqueça o forno a 220 ºC.</li>
-                    <li class="recipe-steps-items">2. Corte as batatas em cubos e frite-as em azeite.</li>
-                    <li class="recipe-steps-items">3. Coloque o bacalhau num tacho com uma folha de louro e cubra-o com água. Leve-o a cozinhar em lume alto e quando levantar fervura baixe o lume e cozinhe durante 5 minutos.</li>
-                    <li class="recipe-steps-items">4. Retire o bacalhau da água e deixe arrefecer. Remova a pele e as espinhas e desfie-o em lascas. Reserve a água da cozedura para depois.</li>
-                    <li class="recipe-steps-items">5. Derreta 40 g de manteiga num tacho. Adicione 40 g de farinha e mexa de imediato. Sem parar de mexer, junte a água de cozedura do bacalhau, 2,5 dl de leite e 2,5 dl de natas. Tempere com sal, pimenta e noz-moscada.</li>
-                    <li class="recipe-steps-items">6. Quando o molho béchamel tiver engrossado e começar a ferver, retire do lume.</li>
-                    <li class="recipe-steps-items">7. Noutro tacho, coloque 100 ml de azeite e deixe refogar as cebolas, o alho picado e a folha de louro. Adicione o bacalhau, mexa e deixe refogar um pouco.</li>
-                    <li class="recipe-steps-items">8. Junte as batatas e envolva bem. Depois, acrescente 2/3 do molho béchamel. Torne a envolver, retire do lume e reserve.</li>
-                    <li class="recipe-steps-items">9. Pincele um tabuleiro de forno com um fio de azeite. Espalhe bem o preparado de bacalhau no tabuleiro, cubra-o com o resto do molho béchamel e polvilhe com o queijo mozzarella ralado.</li>
-                    <li class="recipe-steps-items">10. Leve o bacalhau com natas ao forno durante 20 minutos para gratinar.</li>
+                    <li class="recipe-steps-items">1. Deite o açúcar, o açúcar baunilhado e o amido de milho no copo e triture 10 segundos, na velocidade 9.</li>
+                    <li class="recipe-steps-items">2. Raspe as paredes do copo com a espátula, junte as gemas e o leite e misture 10 segundos, na velocidade 4.</li>
+                    <li class="recipe-steps-items">3. Encaixe a borboleta nas lâminas, junte a tira de casca de limão e programe 12 minutos, na velocidade 2, a 90°C, sem o copo medidor.</li>
+                    <li class="recipe-steps-items">4. Mude o creme para outro recipiente e deixe arrefecer.</li>
+                    <li class="recipe-steps-items">5. Estenda a massa folhada, enrole-a como se fosse uma torta e divida-a em 14 rodelas.</li>
+                    <li class="recipe-steps-items">6. Pré-aqueça o forno a 250° C.</li>
+                    <li class="recipe-steps-items">7. Coloque as rodelas de massa nas formas, pressionando com os polegares e esticando de modo a forrar completamente as formas, e distribua o recheio pelo interior.</li>
+                    <li class="recipe-steps-items">8. Leve a cozer durante 10 minutos, colocando o tabuleiro um pouco abaixo do meio do forno. Polvilhe com o açúcar em pó e a canela.</li>
                 </ul>
             </div>
         </div>
