--- a/Project 1/receita5.html
+++ b/Project 1/receita5.html
@@ -34,7 +34,17 @@
             </ul>
         </nav>
     </section>
-
+    <section class="video-section">
+        <div class="video-container">
+            <iframe 
+                src="https://www.youtube.com/embed/6VErUjHZn_k?si=FXySrDUX886lYYky"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+                class="top-video">
+            </iframe>
+        </div>
+    </section>
     <section class="recipe-detail_section">
         <div class="recipe-detail_instructions">
             <div class="recipe-ingredients">
