--- a/Project 1/receita6.html
+++ b/Project 1/receita6.html
@@ -10,15 +10,20 @@
     <title>Receitas de Culinária</title>
 </head>
 <body>
+    <!-- Tela de Carregamento -->
     <div class="loading-screen">
         <div class="loading-content">
             <div class="loading-text">A carregar...</div>
-            <div class="spinner"></div>
+            <div class="spinner"></div> <!-- Animação de carregamento -->
         </div>
     </div>
+
+    <!-- Cabeçalho -->
     <header class="header">
         <h1 class="header-title">Receitas de Culinária</h1>
     </header>
+
+    <!-- Navegação com links -->
     <section>
         <nav class="navegar">
             <ul class="main-list">
@@ -34,6 +39,8 @@
             </ul>
         </nav>
     </section>
+
+    <!-- Seção de vídeo -->
     <section class="video-section">
         <div class="video-container">
             <iframe 
@@ -45,6 +52,8 @@
             </iframe>
         </div>
     </section>
+
+    <!-- Detalhes da receita -->
     <section class="recipe-detail_section">
         <div class="recipe-detail_instructions">
             <div class="recipe-ingredients">
@@ -89,6 +98,7 @@
         </div>
     </section>
 
+    <!-- Rodapé -->
     <footer class="footer">
         <p>&copy; Receitas de Culinária - Projecto 1 de TWEB 2024</p>
     </footer>
