--- a/Project 1/receita7.html
+++ b/Project 1/receita7.html
@@ -10,15 +10,20 @@
     <title>Receitas de Culinária</title>
 </head>
 <body>
+    <!-- Tela de Carregamento -->
     <div class="loading-screen">
         <div class="loading-content">
             <div class="loading-text">A carregar...</div>
-            <div class="spinner"></div>
+            <div class="spinner"></div> <!-- Animação de carregamento -->
         </div>
     </div>
+
+    <!-- Cabeçalho -->
     <header class="header">
         <h1 class="header-title">Receitas de Culinária</h1>
     </header>
+
+    <!-- Navegação -->
     <section>
         <nav class="navegar">
             <ul class="main-list">
@@ -34,6 +39,8 @@
             </ul>
         </nav>
     </section>
+
+    <!-- Seção de Vídeo -->
     <section class="video-section">
         <div class="video-container">
             <iframe 
@@ -45,6 +52,8 @@
             </iframe>
         </div>
     </section>
+
+    <!-- Detalhes da Receita -->
     <section class="recipe-detail_section">
         <div class="recipe-detail_instructions">
             <div class="recipe-ingredients">
@@ -59,7 +68,7 @@
                     <li class="recipe-ingredients_items">280g de farinha de trigo sem fermento</li>
                     <li class="recipe-ingredients_items">1 colher de chá de fermento em pó</li>
                     <li class="recipe-ingredients_items">1 colher de chá de bicarbonato de sódio</li>
-                    <li class="recipe-ingredients_items">200g de amendoim com sal, picado/li>
+                    <li class="recipe-ingredients_items">200g de amendoim com sal, picado</li>
                 </ul>
             </div>
             <div class="recipe-steps">
@@ -76,6 +85,7 @@
         </div>
     </section>
 
+    <!-- Rodapé -->
     <footer class="footer">
         <p>&copy; Receitas de Culinária - Projecto 1 de TWEB 2024</p>
     </footer>
