--- a/Project 1/receita5.html
+++ b/Project 1/receita5.html
@@ -10,15 +10,20 @@
     <title>Receitas de Culinária</title>
 </head>
 <body>
+    <!-- Tela de carregamento -->
     <div class="loading-screen">
         <div class="loading-content">
             <div class="loading-text">A carregar...</div>
-            <div class="spinner"></div>
+            <div class="spinner"></div> <!-- Animação de carregamento -->
         </div>
     </div>
+
+    <!-- Cabeçalho -->
     <header class="header">
         <h1 class="header-title">Receitas de Culinária</h1>
     </header>
+
+    <!-- Navegação com links -->
     <section>
         <nav class="navegar">
             <ul class="main-list">
@@ -34,6 +39,8 @@
             </ul>
         </nav>
     </section>
+
+    <!-- Seção de vídeo -->
     <section class="video-section">
         <div class="video-container">
             <iframe 
@@ -45,6 +52,8 @@
             </iframe>
         </div>
     </section>
+
+    <!-- Detalhes da receita -->
     <section class="recipe-detail_section">
         <div class="recipe-detail_instructions">
             <div class="recipe-ingredients">
@@ -61,16 +70,21 @@
                     <li class="recipe-ingredients_items">Canela em pó - 1 c. de sopa</li>
                 </ul>
             </div>
+
+            <!-- Passos da receita -->
             <div class="recipe-steps">
                 <h3 class="recipe-steps_title">Preparação</h3>
                 <ul class="recipe-steps_list">
-                    <h3 class="recipe-steps_header">Tortilhas</h5>
+                    <!-- Seção para as tortilhas -->
+                    <h3 class="recipe-steps_header">Tortilhas</h3>
                     <br>
                     <li class="recipe-steps-items">1. Comece por fazer as tortilhas: misture a farinha, o bicarbonato e o sal numa tigela média e incorpore bem; adicione o óleo vegetal e a água morna e amasse até obter uma massa homogénea.</li>
                     <li class="recipe-steps-items">2. Divida a massa em bolinhas e estique-as numa superfície enfarinhada.</li>
                     <li class="recipe-steps-items">3. Coza a massa numa frigideira bem quente e reserve até usar.</li>
                     <br>
-                    <h3 class="recipe-steps_header">Recheio</h5>
+
+                    <!-- Seção para o recheio -->
+                    <h3 class="recipe-steps_header">Recheio</h3>
                     <br>
                     <li class="recipe-steps-items">1. Esmague o abacate e cubra-o com um pouco de sumo de limão, reserve.</li>
                     <li class="recipe-steps-items">2. Pique a cebola e o tomate em pedaços pequenos e tempere com os coentros picados, o sumo de lima, sal e azeite. Reserve também.</li>
@@ -84,6 +98,7 @@
         </div>
     </section>
 
+    <!-- Rodapé -->
     <footer class="footer">
         <p>&copy; Receitas de Culinária - Projecto 1 de TWEB 2024</p>
     </footer>
