--- a/Project 1/Project1.html
+++ b/Project 1/Project1.html
@@ -13,6 +13,8 @@
     <meta name="author" content="Miguel Machado">
     <!-- Link para o arquivo de estilos CSS -->
     <link rel="stylesheet" href="Project1.css">
+    <!-- Para a setinha da dropdown-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- Título da página -->
     <title>Receitas de Culinária</title>
 </head>
@@ -32,19 +34,21 @@
         <div class="search-bar">
             <!-- Formulário de pesquisa para selecionar a receita -->
             <form action="" method="get">
-                <!-- Caixa de seleção de receitas -->
-                <select name="recipe" class="recipe-select">
-                    <option value="" disabled selected>Escolha uma receita...</option>
-                    <option value="http://127.0.0.1:5500/TWEB/Project%201/receita1.html">Lasanha</option>
-                    <option value="http://127.0.0.1:5500/TWEB/Project%201/receita2.html">Bolo de iogurte</option>
-                    <option value="http://127.0.0.1:5500/TWEB/Project%201/receita3.html">Bacalhau com natas</option>
-                    <option value="http://127.0.0.1:5500/TWEB/Project%201/receita4.html">Pastel de nata caseiro</option>
-                    <option value="http://127.0.0.1:5500/TWEB/Project%201/receita5.html">Burritos</option>
-                    <option value="http://127.0.0.1:5500/TWEB/Project%201/receita6.html">Carapau de corrida</option>
-                    <option value="http://127.0.0.1:5500/TWEB/Project%201/receita7.html">Bolachas de Amendoim</option>
-                </select>
-                <!-- Botão de pesquisa -->
-                <button type="submit" class="search-button">🔍</button>
+                <!-- Dropdown estilizado -->
+                <div class="dropdown">
+                    <button class="dropbtn" disabled selected >Escolha uma receita...
+                        <i class="fa fa-caret-down"></i> <!-- Setinha para baixo -->
+                    </button>
+                    <div class="dropdown-content">
+                        <a href="http://127.0.0.1:5500/TWEB/Project%201/receita1.html">Lasanha</a>
+                        <a href="http://127.0.0.1:5500/TWEB/Project%201/receita2.html">Bolo de iogurte</a>
+                        <a href="http://127.0.0.1:5500/TWEB/Project%201/receita3.html">Bacalhau com natas</a>
+                        <a href="http://127.0.0.1:5500/TWEB/Project%201/receita4.html">Pastel de nata caseiro</a>
+                        <a href="http://127.0.0.1:5500/TWEB/Project%201/receita5.html">Burritos</a>
+                        <a href="http://127.0.0.1:5500/TWEB/Project%201/receita6.html">Carapau de corrida</a>
+                        <a href="http://127.0.0.1:5500/TWEB/Project%201/receita7.html">Bolachas de Amendoim</a>
+                    </div>
+                </div>
             </form>
         </div>
     </header>
