--- a/Project 1/receita1.html
+++ b/Project 1/receita1.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Descrição do site para motores de busca -->
     <meta name="description" content="Receitas de Culinária">
-    <!-- Palavras-chave para SEO -->
+    <!-- Palavras-chave -->
     <meta name="keywords" content="Receitas">
     <!-- Autor do site -->
     <meta name="author" content="Miguel Machado">
