--- a/Project 1/receita7.html
+++ b/Project 1/receita7.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Definindo a codificação de caracteres para UTF-8 -->
     <meta charset="UTF-8">
+    <!-- Definindo a escala para dispositivos móveis -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Descrição do site para motores de busca -->
     <meta name="description" content="Receitas de Culinária">
+    <!-- Palavras-chave -->
     <meta name="keywords" content="Receitas">
+    <!-- Autor do site -->
     <meta name="author" content="Miguel Machado">
+    <!-- Link para o arquivo de estilos CSS -->
     <link rel="stylesheet" href="Project1.css">
+    <!-- Título da página -->
     <title>Receitas de Culinária</title>
 </head>
 <body>
