--- a/Project 1/Project1.html
+++ b/Project 1/Project1.html
@@ -53,9 +53,10 @@
         </div>
     </header>
 
-    <!-- Seção de receitas em destaque -->
+    <!-- Secção de receitas em destaque -->
     <section class="highlights">
         <h2>Receitas em Destaque</h2>
+        <br>
         <div class="recipe-cards">
             <!-- Card para cada receita em destaque -->
             <div class="recipe-card">
@@ -69,9 +70,10 @@
         </div>
     </section>
     
-    <!-- Seção de lista com algumas receitas -->
+    <!-- Secção de lista com algumas receitas -->
     <section class="recipe-list">
         <h2>Algumas Receitas</h2>
+        <br>
         <div class="recipe-grid">
             <!-- Cada receita é apresentada em um item da lista -->
             <div class="recipe-item">
