--- a/Project 1/receita3.html
+++ b/Project 1/receita3.html
@@ -30,7 +30,7 @@
         <h1 class="header-title">Receitas de Culinária</h1>
     </header>
 
-    <!-- Seção de navegação -->
+    <!-- Secção de navegação -->
     <section>
         <nav class="navegar">
             <!-- Lista de navegação -->
@@ -50,7 +50,7 @@
         </nav>
     </section>
 
-    <!-- Seção de vídeo da receita de Bacalhau com Natas -->
+    <!-- Secção de vídeo da receita de Bacalhau com Natas -->
     <section class="video-section">
         <div class="video-container">
             <!-- Incorporação de vídeo do YouTube para a receita -->
@@ -64,10 +64,10 @@
         </div>
     </section>
 
-    <!-- Seção de detalhes da receita -->
+    <!-- Secção de detalhes da receita -->
     <section class="recipe-detail_section">
         <div class="recipe-detail_instructions">
-            <!-- Seção de ingredientes para a receita de Bacalhau com Natas -->
+            <!-- Secção de ingredientes para a receita de Bacalhau com Natas -->
             <div class="recipe-ingredients">
                 <h3 class="recipe-ingredients_title">Ingredientes</h3>
                 <ul class="recipe-ingredients_list">
@@ -97,7 +97,7 @@
                 </ul>
             </div>
 
-            <!-- Seção de preparação (passos) da receita -->
+            <!-- Secção de preparação (passos) da receita -->
             <div class="recipe-steps">
                 <h3 class="recipe-steps_title">Preparação</h3>
                 <ul class="recipe-steps_list">
