--- a/Project 1/receita7.html
+++ b/Project 1/receita7.html
@@ -47,7 +47,7 @@
         </nav>
     </section>
 
-    <!-- Seção de Vídeo -->
+    <!-- Secção de Vídeo -->
     <section class="video-section">
         <div class="video-container">
             <iframe 
