--- a/Project 1/receita2.html
+++ b/Project 1/receita2.html
@@ -30,7 +30,7 @@
         <h1 class="header-title">Receitas de Culinária</h1>
     </header>
 
-    <!-- Seção de navegação -->
+    <!-- Secção de navegação -->
     <section>
         <nav class="navegar">
             <!-- Lista de navegação -->
@@ -50,7 +50,7 @@
         </nav>
     </section>
 
-    <!-- Seção de imagem com a receita de Bolo de Iogurte -->
+    <!-- Secção de imagem com a receita de Bolo de Iogurte -->
     <section class="image-section">
         <div class="image-container">
             <!-- Imagem principal da receita de Bolo de Iogurte -->
@@ -58,10 +58,10 @@
         </div>
     </section>
 
-    <!-- Seção de detalhes da receita -->
+    <!-- Secção de detalhes da receita -->
     <section class="recipe-detail_section">
         <div class="recipe-detail_instructions">
-            <!-- Seção de ingredientes da receita -->
+            <!-- Secção de ingredientes da receita -->
             <div class="recipe-ingredients">
                 <h3 class="recipe-ingredients_title">Ingredientes</h3>
                 <ul class="recipe-ingredients_list">
@@ -77,7 +77,7 @@
                 </ul>
             </div>
 
-            <!-- Seção de passos de preparação da receita -->
+            <!-- Secção de passos de preparação da receita -->
             <div class="recipe-steps">
                 <h3 class="recipe-steps_title">Preparação</h3>
                 <ul class="recipe-steps_list">
