--- a/Project 1/receita5.html
+++ b/Project 1/receita5.html
@@ -47,7 +47,7 @@
         </nav>
     </section>
 
-    <!-- Seção de vídeo -->
+    <!-- Secção de vídeo -->
     <section class="video-section">
         <div class="video-container">
             <iframe 
