--- a/receita3.html
+++ b/receita3.html
@@ -37,7 +37,7 @@
             <ul class="main-list">
                 <!-- Item de navegação para ir para a página inicial -->
                 <li class="item-list">
-                    <a href="http://127.0.0.1:5500/TWEB/Project%201/Project1.html" class="home_link">Home</a>
+                    <a href="index.html" class="home_link">Home</a>
                 </li>
                 <!-- Item de navegação para a receita de Bacalhau com Natas -->
                 <li class="item-list">
