--- a/receita7.html
+++ b/receita7.html
@@ -35,7 +35,7 @@
         <nav class="navegar">
             <ul class="main-list">
                 <li class="item-list">
-                    <a href="http://127.0.0.1:5500/TWEB/Project%201/Project1.html" class="home_link">Home</a>
+                    <a href="index.html" class="home_link">Home</a>
                 </li>
                 <li class="item-list">
                     <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
