--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
                         <i class="fa fa-caret-down"></i> <!-- Setinha para baixo -->
                     </button>
                     <div class="dropdown-content">
-                        <a href="http://127.0.0.1:5500/TWEB/Project%201/receita1.html">Lasanha</a>
-                        <a href="http://127.0.0.1:5500/TWEB/Project%201/receita2.html">Bolo de iogurte</a>
-                        <a href="http://127.0.0.1:5500/TWEB/Project%201/receita3.html">Bacalhau com natas</a>
-                        <a href="http://127.0.0.1:5500/TWEB/Project%201/receita4.html">Pastel de nata caseiro</a>
-                        <a href="http://127.0.0.1:5500/TWEB/Project%201/receita5.html">Burritos</a>
-                        <a href="http://127.0.0.1:5500/TWEB/Project%201/receita6.html">Carapau de corrida</a>
-                        <a href="http://127.0.0.1:5500/TWEB/Project%201/receita7.html">Bolachas de Amendoim</a>
+                        <a href="receita1.html">Lasanha</a>
+                        <a href="receita2.html">Bolo de iogurte</a>
+                        <a href="receita3.html">Bacalhau com natas</a>
+                        <a href="receita4.html">Pastel de nata caseiro</a>
+                        <a href="receita5.html">Burritos</a>
+                        <a href="receita6.html">Carapau de corrida</a>
+                        <a href="receita7.html">Bolachas de Amendoim</a>
                     </div>
                 </div>
             </form>
